# bitcart

./: .all-contributorsrc  .coveragerc  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CODING_STANDARDS.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  alembic.ini  context7.json  daemon.py  gunicorn.conf.py  justfile  main.py  manage.py  pyproject.toml  pytest.ini  renovate.json  reqs.txt  requirements.dev.txt  requirements.txt  setup.cfg  worker.py
.circleci/: build.py  build.sh  config.yml  images.json
.github/: .codecov.yml  FUNDING.yml  dependabot.yml  images.json  renovate.json  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_and_test.yml  ci.yml  issues-diagram.yml  labels-sync.yml  lint.yml  release.yml  test.yml
alembic/: env.py  script.py.mako
alembic/versions/: 03e98a49599c_update_indexes_to_use_new_naming_.py  0942568d6ea6_store_improvements.py  12f53bb6513c_add_email_verification.py  1ba065c3a2b1_remove_token_model.py  1c45e078409d_add_payment_id_to_invoices.py  1c465e341efa_removed_balance_field.py  2020-01-01-2014_initial_revision.py  2020-01-07-1751_store_quantity_with_invoice.py  2020-01-19-1241_add_store_id_to_invoice.py  2020-01-19-1813_ipn_support.py  2020-02-02-1005_add_invoice_fiat_currencies.py  2020-02-08-2240_add_settings_storage.py  2020-02-21-1734_added_api_tokens.py  2020-06-20-2326_added_notifications.py  2020-07-04-1626_added_custom_templates.py  2020-07-06-1950_add_user_id_to_every_model.py  2020-07-11-2147_added_template_selection_per_store.py  2020-08-19-1723_store_invoice_expiration.py  2020-08-20-1601_added_created_field_to_each_model.py  2020-09-12-0007_add_paid_currency_to_invoice.py  2020-10-09-2329_removed_balance_field.py  2020-12-06-1646_add_lightning_network.py  2021-01-03-2145_fix_html_templates_rendering.py  2021-01-19-2255_add_id_to_payment_methods.py  2021-01-20-2310_add_transaction_speed.py  2021-01-21-2300_support_underpaid_invoices.py  2021-01-22-1457_move_checkout_settings_to_json.py  2021-01-22-1948_add_recommended_fee.py  2021-05-13-1741_add_unique_id.py  2021-05-30-1555_use_text_everywhere.py  2021-06-06-2154_add_user_settings_field.py  2021-08-01-1223_add_wallets_labels.py  2021-11-20-2354_add_store_theme_settings.py  2022-02-25-2119_add_checkout_address.py  2022-03-17-1236_add_eth.py  2022-03-30-2313_add_erc_20_tokens_support.py  2022-05-01-1511_add_store_plugin_settings.py  2022-05-04-1807_add_checkout_hints.py  2022-08-04-1559_add_payouts.py  2022-11-06-2040_add_tx_hashes_to_invoices.py  (+73 more)
api/: bootstrap.py  constants.py  crud.py  db.py  events.py  exceptions.py  invoices.py  logfire.py  logger.py  logging.py  logserver.py  metrics.py  models.py  openapi.py  pagination.py  plugins.py  redis.py  schemes.py  sentry.py  settings.py  sqltypes.py  tasks.py  templates.py  types.py  utils.py  version.py  views.py  worker.py
api/crud/: __init__.py  discounts.py  invoices.py  notifications.py  payouts.py  products.py  stores.py  templates.py  users.py  wallets.py
api/ext/: backups.py  configurator.py  export.py  fxrate.py  notifiers.py  payouts.py  plugins.py  sentry.py  shopify.py  ssh.py  tor.py  update.py
api/ioc/: __init__.py  app.py  repositories.py  services.py  starlette.py  worker.py
api/schemas/: auth.py  base.py  configurator.py  discounts.py  files.py  invoices.py  misc.py  notifications.py  payouts.py  plugins.py  policies.py  products.py  refunds.py  stores.py  tasks.py  templates.py  tokens.py  users.py  wallets.py
api/services/: auth.py  backup_manager.py  coins.py  exchange_rate.py  health_check.py  ipn_sender.py  management.py  metrics_service.py  notification_manager.py  payment_processor.py  payout_manager.py  plugin_manager.py  plugin_registry.py  server_manager.py  settings.py  wallet_data.py
api/social/: __init__.py  base.py  github.py  google.py
api/templates/: customer_refund.j2  email_base_shop.j2  email_product.j2  forgotpassword.j2  merchant_refund_notify.j2  notification.j2  shop.j2  syncinfo.j2  verifyemail.j2
api/utils/: __init__.py  authorization.py  common.py  database.py  email.py  files.py  host.py  logging.py  notifications.py  policies.py  redis.py  routing.py  schemes.py  tasks.py  templates.py  time.py  wallets.py
api/views/: __init__.py  configurator.py  cryptos.py  discounts.py  files.py  health.py  invoices.py  manage.py  metrics.py  notifications.py  payouts.py  plugins.py  products.py  stores.py  templates.py  token.py  tor.py  update.py  users.py  wallets.py  websocket.py
cli/: Makefile  README.md  bitcart-cli.go  cli.go  commands.go  data.go  fileutils.go  go.mod  go.sum  utils.go  validators.go
cli/plugin/: .gitignore.tmpl  manifest.json.tmpl
conf/: .env.dev.sample  .env.sample  README.md  terminals.json
daemons/: README.md  base.py  bch.py  bnb.py  bsty.py  btc.py  eth.py  genericprocessor.py  grs.py  gzro.py  jsonrpc.py  ln.py  logger.py  ltc.py  matic.py  sbch.py  storage.py  sui.py  trx.py  utils.py  xmr.py  xrg.py  xrp.py
daemons/abi/: bep20.json  erc20.json
daemons/spec/: README.md  bch.json  btc.json  eth.json  trx.json  xmr.json  xrp.json
daemons/tokens/: bep20.json  erc20.json  (+4 more)
docs/: conf.py  index.rst  installation.rst  support.rst
gui/: admin.py  api.py  apps.py  consumers.py  context_processors.py  crud.py  db.py  forms.py  models.py  routing.py  schemes.py  serializers.py  tasks.py  urls.py  utils.py  views.py
helpers/: compile-requirements.sh  sync-requirements.sh  update.sh
mainsite/: celery.py  routing.py  settings.py  urls.py  wsgi.py
migrations/: env.py  script.py.mako
requirements/: base.txt  dev.txt  production.txt  test.txt  web.txt
scripts/: check-compiled.py  compile-requirement.sh  compile-requirements.sh  pluginmigrate.py  regentokens.py  sync-requirements.sh
tests/: conftest.py  helper.py  test_crud.py  test_events.py  test_kraken_exchange.py  test_schemes.py  test_sui_daemon.py  test_templates.py  test_utils.py  test_views.py  test_views_paginations.py  test_xrp_integration.py  test_xrp_payto.py
(+253 files in other folders)
