[project]
name = "bitcart-api"
version = "1.0.0"
description = "Bitcart Merchants API"
requires-python = ">=3.12"
dependencies = ["python-decouple", "rust-just>=1.46.0"]

[dependency-groups]
lint = ["mypy>=1.13.0", "prek>=0.3.1", "ruff>=0.9.5"]
test = [
    "fakeredis>=2.31.1",
    "filelock>=3.19.1",
    "httpx>=0.28.1",
    "httpx-ws>=0.7.2",
    "pytest>=8.3.5",
    "pytest-cov>=6.2.1",
    "pytest-durations>=1.6.1",
    "pytest-mock>=3.15.0",
    "pytest-xdist>=3.8.0",
]
types = [
    "types-aiofiles>=24.1.0.20250822",
    "types-paramiko>=4.0.0.20250822",
    "types-python-dateutil>=2.9.0.20250822",
]
web = [
    "advanced-alchemy>=0.26.2",
    "aiofiles>=24.1.0",
    "alembic>=1.16.1",
    "apprise>=1.9.4",
    "asyncpg>=0.30.0",
    "bitcart>=1.18.0.0",
    "dishka>=1.4.2",
    "fastapi>=0.115.6",
    "fido2>=2.0.0",
    "jinja2>=3.1.6",
    "jsonschema>=4.25.1",
    "msgpack>=1.1.1",
    "paramiko>=4.0.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pwdlib[bcrypt]>=0.2.1",
    "py-machineid>=0.8.0",
    "pydantic-settings>=2.7.0",
    "pydantic[email]>=2.10.3",
    "pyotp>=2.9.0",
    "python-dateutil>=2.9.0",
    "python-multipart>=0.0.20",
    "python-ulid[pydantic]>=3.0.0",
    "redis[hiredis]>=5.2.1",
    "scalar-fastapi>=1.4.0",
    "sentry-sdk[fastapi,sqlalchemy]",
    "sqlalchemy[asyncio]>=2.0.36",
    "structlog>=24.4.0",
    "taskiq>=0.11.18",
    "taskiq-redis>=1.1.0",
    "uvicorn[standard]>=0.34.0",
]
otel = [
    "opentelemetry-distro[otlp]>=0.60b1,<0.61",
    "opentelemetry-instrumentation>=0.60b1,<0.61",
    "opentelemetry-sdk>=1.39.0,<1.40.0",
]
production = ["gunicorn>=23.0.0"]

# daemons
daemon-base = ["aiohttp<4.0"]
btc-based = [{ include-group = "daemon-base" }]
btc-derived = [
    { include-group = "btc-based" },
    "electrum-ecc @ git+https://github.com/bitcart/electrum-ecc@d90e8c79fb7d83fdea9ad0de94dce07f836f69bb",
]
eth-based = [
    { include-group = "daemon-base" },
    "aiolimiter",
    "mnemonic",
    "web3>=7,<8",
]

# sort alphabetically
bch = [
    { include-group = "btc-based" },
    "electron-cash @ https://github.com/Electron-Cash/Electron-Cash/archive/492f050ebe87d58faf57bee131912b6c0d049820.zip",
]
bnb = [{ include-group = "eth-based" }]
btc = [
    { include-group = "btc-derived" },
    "electrum[crypto] @ git+https://github.com/spesmilo/electrum@0f4d8d6d57bbff3428950cf531bc98eae473beec",
]
eth = [{ include-group = "eth-based" }]
grs = [
    { include-group = "btc-derived" },
    "electrum-grs[crypto] @ git+https://github.com/Groestlcoin/electrum-grs@a10de858525b7045b835a840200cf9fcff3bfe9e",
]
ltc = [
    { include-group = "btc-derived" },
    "electrum-ltc[crypto] @ git+https://github.com/bitcart/electrum-ltc@5fd99314de302d9ed3c90537643f2e0ba82c1f02",
    "scrypt>=0.6.0",
]
matic = [{ include-group = "eth-based" }]
trx = [{ include-group = "eth-based" }, "async-lru", "tronpy", "trontxsize"]
xmr = [{ include-group = "daemon-base" }, "monero", "universalasync"]
xrg = [
    { include-group = "btc-based" },
    "oregano @ https://github.com/Ergon-moe/Oregano/archive/6bf78d3be864c053c95ee332c6ab366e5695d8a4.zip",
]

daemons = [
    { include-group = "bch" },
    { include-group = "bnb" },
    { include-group = "btc" },
    { include-group = "eth" },
    { include-group = "grs" },
    { include-group = "ltc" },
    { include-group = "matic" },
    { include-group = "trx" },
    { include-group = "xmr" },
    { include-group = "xrg" },
]

# all groups
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "web" },
    { include-group = "types" },
    { include-group = "daemons" },
    { include-group = "otel" },
    { include-group = "production" },
]

[tool.uv]
# python-dateutil for electron-cash requiring an older version for no reason
override-dependencies = ["python-dateutil>=2.9.0"]
config-settings-package = { "electrum-ecc" = { "electrum_ecc.dont_compile" = "1" } }
# dependency cooldowns for security
exclude-newer = "1 week"

# except for our packages
[tool.uv.exclude-newer-package]
bitcart = "0 days"
trontxsize = "0 days"
universalasync = "0 days"
tronpy = "0 days"

[tool.ruff]
target-version = "py312"
line-length = 127

[tool.ruff.lint]
select = [
    "F",
    "E",
    "I",
    "UP",
    "YTT",
    "B",
    "T10",
    "C",
    "SIM",
    "RUF100",
    "RET",
    "A",
    "S",
    "ASYNC",
    "TID",
    "PLC0415",
    "T201",
]
preview = true
unfixable = ["F401"]
ignore = [
    "RET502",
    "RET503",
    "S104",
    "S507",
    "ASYNC110",
    "ASYNC240", # TODO: potentially enable this
    "A005",
    "PLC0415",
] # Enable PLC0415 when ready
mccabe = { max-complexity = 12 }

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]
"scripts/*" = ["S", "T201"]
"backups/*" = ["T201"]

[tool.ruff.lint.isort]
known-third-party = ["bitcart"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.params.Depends",
    "fastapi.Query",
    "fastapi.params.Query",
    "fastapi.Path",
    "fastapi.params.Path",
    "fastapi.Body",
    "fastapi.params.Body",
    "fastapi.Form",
    "fastapi.params.Form",
    "fastapi.Header",
    "fastapi.params.Header",
    "fastapi.File",
    "fastapi.params.File",
    "fastapi.Cookie",
    "fastapi.params.Cookie",
    "fastapi.Security",
    "fastapi.params.Security",
]

[tool.mypy]
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
strict_equality = true
disallow_untyped_defs = true
skip_cache_mtime_checks = true
exclude = ["daemons", "backups"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
junit_duration_report = "call"
junit_suite_name = "bitcart_test_suite"
addopts = ["-n", "auto", "--cov=api", "--cov-report", "term-missing"]
filterwarnings = [
    "error::DeprecationWarning",
    "error::PendingDeprecationWarning",
    # https://github.com/MagicStack/uvloop/issues/703
    "ignore:.*asyncio.iscoroutinefunction.*:DeprecationWarning",
]
norecursedirs = ["tests/functional"]
